# 3d_graphics

./: .gitignore  README.md
exercise1/: CMakeLists.txt  a.cpp  b.cpp
exercise2/: 1a.cpp  1b.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt
rubiks_cube/: CMakeLists.txt  main.cpp  quaternion.cpp  quaternion.hpp
